--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
-  text-align: center;
+  margin: 0 auto;
+  max-width: 750px;
+  background-color: rgba(245, 247, 165, 0.671)
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -13,20 +15,22 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-header {  
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ justify-content: center;
+  background-color: rgb(54, 54, 56);
 }
 
-.App-link {
-  color: #61dafb;
-}
+.App-header p {
+  font-size: 25px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+ }
+
+
+ 
 
 @keyframes App-logo-spin {
   from {
